# MoreOrLess

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  win_cmake.yml
src/: main.cpp
